--- a/sass/abstract/mixins.scss
+++ b/sass/abstract/mixins.scss
@@ -1,7 +1,58 @@
-@mixin clearfix{
-    &:after{
+@mixin clearfix {
+    &:after {
         content: "";
         display: table;
         clear: both;
     }
+}
+
+
+// media queries////////////
+
+// 0-600px: phones
+// 600-900px: tab port
+// 900-1200px: tab land
+// 1200px-1800px: lg screen (normal css that we wrote goes into here)
+// 1800px + : xl screen
+// 1em = 16px
+
+
+@mixin respond($breakpoint) {
+
+    @if $breakpoint==xl-screen {
+        @media (min-width: 112.5em) {
+            //1800px
+            @content
+        }
+
+        ;
+    }
+
+    @if $breakpoint==tab-land {
+        @media (max-width: 75em) {
+            //1200px 
+            @content
+        }
+
+        ;
+    }
+
+    @if $breakpoint==tab-port {
+        @media (max-width: 56.25em) {
+            //900px
+            @content
+        }
+
+        ;
+    }
+
+    @if $breakpoint==phone {
+        @media (max-width: 37.5em) {
+            //600px
+            @content
+        }
+
+        ;
+    }
+
 }
