--- a/sass/abstract/variables.scss
+++ b/sass/abstract/variables.scss
@@ -21,4 +21,5 @@ $default-font-size : 1.6rem;
 // grid/////////////////
 $grid-width : 114rem;
 $gutter-vertical : 8rem;
+$gutter-vertical-md : 6rem;
 $gutter-horizontal : 6rem;
