--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -7,7 +7,20 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 62.5%; //1rem = 10px;
+
+    @include respond(xl-screen) {
+        font-size: 75%; //1rem = 12/16 = 75
+    }
+
+    @include respond(tab-land) {
+        font-size: 56.25%; //1rem = 9px, 9/16 = 56.25
+    }
+
+    @include respond(tab-port) {
+        font-size: 50%; //1rem = 8px, 8/16 = 50
+    }
+
 }
 
 body {
@@ -18,4 +31,8 @@ body {
     color: $color-dark-grey;
     padding: 3rem;
     box-sizing: border-box;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
