--- a/sass/base/typography.scss
+++ b/sass/base/typography.scss
@@ -10,6 +10,12 @@
         letter-spacing: 3.5rem;
         animation: moveInLeft 1s ease-in-out;
         -webkit-animation: moveInLeft 1s ease-in-out;
+
+
+        @include respond(phone) {
+            letter-spacing: 1rem; //1rem = 8px, 8/16 = 50
+            font-size: 5rem;
+        }
     }
 
     &-sub {
@@ -19,45 +25,56 @@
         letter-spacing: 1.75rem;
         animation: moveInRight 1s ease-in-out;
         -webkit-animation: moveInRight 1s ease-in-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
-.heading-secondary {
-    font-size: 3.5rem;
-    text-transform: uppercase;
-    font-weight: 700;
-    background-image: linear-gradient(to right, $color-light-green, $color-dark-green);
-    display: inline-block;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    letter-spacing: 2px;
-    transition: all .2s;
-    -webkit-transition: all .2s;
-    -moz-transition: all .2s;
-    -ms-transition: all .2s;
-    -o-transition: all .2s;
+    .heading-secondary {
+        font-size: 3.5rem;
+        text-transform: uppercase;
+        font-weight: 700;
+        background-image: linear-gradient(to right, $color-light-green, $color-dark-green);
+        display: inline-block;
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
+        letter-spacing: 2px;
+        transition: all .2s;
+        -webkit-transition: all .2s;
+        -moz-transition: all .2s;
+        -ms-transition: all .2s;
+        -o-transition: all .2s;
 
-    &:hover {
-        transform: skewY(2deg) skewX(15deg) scale(1.1);
-        -webkit-transform: skewY(2deg) skewX(15deg) scale(1.1);
-        -moz-transform: skewY(2deg) skewX(15deg) scale(1.1);
-        -ms-transform: skewY(2deg) skewX(15deg) scale(1.1);
-        -o-transform: skewY(2deg) skewX(15deg) scale(1.1);
-        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+        @include respond(tab-port){
+            font-size: 3rem;
+        }
+        @include respond(phone){
+            font-size: 2.5rem;
+        }
+
+        &:hover {
+            transform: skewY(2deg) skewX(15deg) scale(1.1);
+            -webkit-transform: skewY(2deg) skewX(15deg) scale(1.1);
+            -moz-transform: skewY(2deg) skewX(15deg) scale(1.1);
+            -ms-transform: skewY(2deg) skewX(15deg) scale(1.1);
+            -o-transform: skewY(2deg) skewX(15deg) scale(1.1);
+            text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+        }
     }
-}
 
-.heading-tertiary {
-    font-size: $default-font-size;
-    font-weight: 700;
-    text-transform: uppercase
-}
-
-.paragraph {
-    font-size: $default-font-size;
-
-    &:not(:last-child) {
-        margin-bottom: 3rem;
+    .heading-tertiary {
+        font-size: $default-font-size;
+        font-weight: 700;
+        text-transform: uppercase
     }
-}
+
+    .paragraph {
+        font-size: $default-font-size;
+
+        &:not(:last-child) {
+            margin-bottom: 3rem;
+        }
+    }
