--- a/sass/layout/grid.scss
+++ b/sass/layout/grid.scss
@@ -1,10 +1,19 @@
 .row {
-    max-width: 114rem;
+    max-width: $grid-width;
     margin: 0 auto;
+
+    @include respond (tab-port) {
+        max-width: 50rem;
+    }
 
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include respond (tab-port) {
+            margin-bottom: $gutter-vertical-md;
+        }
     }
+
 
     @include clearfix;
 
@@ -13,6 +22,15 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+
+            @include respond (tab-port) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-md;
+            }
+        }
+
+        @include respond (tab-port) {
+            width: 100% !important;
         }
     }
 
