--- a/sass/abstract/mixins.scss
+++ b/sass/abstract/mixins.scss
@@ -20,7 +20,7 @@
 @mixin respond($breakpoint) {
 
     @if $breakpoint==xl-screen {
-        @media (min-width: 112.5em) {
+        @media only screen and (min-width: 112.5em) {
             //1800px
             @content
         }
@@ -29,7 +29,7 @@
     }
 
     @if $breakpoint==tab-land {
-        @media (max-width: 75em) {
+        @media only screen and (max-width: 75em) {
             //1200px 
             @content
         }
@@ -38,7 +38,7 @@
     }
 
     @if $breakpoint==tab-port {
-        @media (max-width: 56.25em) {
+        @media only screen and (max-width: 56.25em) {
             //900px
             @content
         }
@@ -47,7 +47,7 @@
     }
 
     @if $breakpoint==phone {
-        @media (max-width: 37.5em) {
+        @media only screen and (max-width: 37.5em) {
             //600px
             @content
         }
