--- a/sass/component/card.scss
+++ b/sass/component/card.scss
@@ -165,4 +165,64 @@
         font-size: 6rem;
         font-weight: 100;
     }
+
+
+    // @include respond (tab-port) {
+    @media only screen and (max-width: 56.25em),
+    only screen and (hover: none) {
+
+        height: auto;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &-side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &-back {
+                transform: rotateY(0);
+                -webkit-transform: rotateY(0);
+                -moz-transform: rotateY(0);
+                -ms-transform: rotateY(0);
+                -o-transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+            }
+        }
+
+        &:hover &-side-front {
+            transform: rotateY(0);
+            -webkit-transform: rotateY(0);
+            -moz-transform: rotateY(0);
+            -ms-transform: rotateY(0);
+            -o-transform: rotateY(0);
+        }
+
+        // back side////////////////////
+        &-cta {
+            width: 100%;
+            position: relative;
+            top: 0;
+            left: 0;
+            transform: translate(0);
+            -webkit-transform: translate(0);
+            -moz-transform: translate(0);
+            -ms-transform: translate(0);
+            -o-transform: translate(0);
+            padding: 7rem 4rem 4rem 4rem;
+        }
+
+        &-price-box {
+            margin-bottom: 3rem;
+        }
+
+        &-price-value {
+            font-size: 4rem;
+        }
+    }
 }
