--- a/sass/component/form.scss
+++ b/sass/component/form.scss
@@ -65,6 +65,10 @@
     &-radio-group {
         width: 49%;
         display: inline-block;
+        @include respond (tab-port){
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &-radio-input {
