--- a/sass/component/story.scss
+++ b/sass/component/story.scss
@@ -16,18 +16,39 @@
     -ms-transform: skewX(-12deg);
     -o-transform: skewX(-12deg);
 
+    @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem 4rem 4rem 7rem;
+    }
+
+    @include respond (phone) {
+        transform: skewX(0);
+        -webkit-transform: skewX(0);
+        -moz-transform: skewX(0);
+        -ms-transform: skewX(0);
+        -o-transform: skewX(0);
+    }
+
     &-shape {
         width: 15rem;
         height: 15rem;
         float: left;
         shape-outside: circle(50% at 50% 50%);
         clip-path: circle(50% at 50% 50%);
-        transform: skewX(12deg);
-        -webkit-transform: skewX(12deg);
-        -moz-transform: skewX(12deg);
-        -ms-transform: skewX(12deg);
-        -o-transform: skewX(12deg);
+        transform: translateX(-3rem) skewX(12deg);
+        -webkit-transform: translateX(-3rem) skewX(12deg);
+        -moz-transform: translateX(-3rem) skewX(12deg);
+        -ms-transform: translateX(-3rem) skewX(12deg);
+        -o-transform: translateX(-3rem) skewX(12deg);
         position: relative;
+
+        @include respond (phone) {
+            transform: translateX(-3rem) skewX(0);
+            -webkit-transform: translateX(-3rem) skewX(0);
+            -moz-transform: translateX(-3rem) skewX(0);
+            -ms-transform: translateX(-3rem) skewX(0);
+            -o-transform: translateX(-3rem) skewX(0);
+        }
     }
 
     &-img {
@@ -48,6 +69,14 @@
         -moz-transform: translateX(3rem) skewX(12deg);
         -ms-transform: translateX(3rem) skewX(12deg);
         -o-transform: translateX(3rem) skewX(12deg);
+
+        @include respond (phone) {
+            transform: skewX(0);
+            -webkit-transform: skewX(0);
+            -moz-transform: skewX(0);
+            -ms-transform: skewX(0);
+            -o-transform: skewX(0);
+}
     }
 
     &-caption {
