--- a/sass/pages/sections.scss
+++ b/sass/pages/sections.scss
@@ -9,9 +9,10 @@
         margin-top: -20vh;
         padding: 25rem 0;
 
-        @include respond (tab-port){
+        @include respond (tab-port) {
             padding: 30rem 0;
         }
+
         @include respond (phone) {
             padding: 23rem 0;
         }
@@ -74,7 +75,6 @@
     background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10.jpg);
     background-size: 100%;
     //100% means the same thing as cover ////////////
-    height: 50rem;
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -82,8 +82,26 @@
     -o-border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
+    @include respond (tab-land) {
+        background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 65%, transparent 65%), url(../img/nat-10.jpg);
+        background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right, rgba($color-white, .9)0%, rgba($color-white, .9)100%), url(../img/nat-10.jpg);
+    }
+
     &-form {
         width: 50%;
         padding: 6rem;
+
+        @include respond (tab-land) {
+            width: 65%;
+        }
+
+        @include respond (tab-port) {
+            width: 100%;
+        }
+
     }
 }
